$Revision: 1.20 $

v5_2_4 Aug 08 2011
------------------
	1. Fix <label>/<prefix> bug

v5_2_3 Aug 08 2011
------------------
	1. Modified GenEventInfoProductHelper.cc to use new param mechanism.
	2. Introduce variable prefix mechanism
					<label>/<prefix>
	e.g.
	GenEventInfoProductHelper	generator/cteq		


v5_2_2 Aug 01 2011
------------------
	1. Introduced param keyword in buffers. Helper classes can accessed buffer
	specific parameters using the method paramater(string) >> value
	2. Fix bug in mkhelper.py

	
v5_2_0 Jul 22 2011
------------------
	1. Fix duplicate class bug in classes_def.xml
	2. make block, buffer, and label names available to helpers
	3. undo is broken for now!

v5_1_9 Jul 20 2011
------------------
	1. Work with BuildFile.xml only and update mkpackage.py and mkhelper.py
	accordingly.
	2. Call HLTConfigProvider from beginRun() in TheNtupleMaker.
	3. Make pointer, hltconfig, to HLTConfigProvider available to all helpers
	and update HelperFor and Configuration accordingly.
	4. Remove HLT config set up from TriggerResultsHelper in user.cc.
	5. Fix problem with simple types in mkanalyzer.py
	6. Make mkvariables.py produce exactly the same variable names as 
	TheNtupleMaker.

v5_1_8 Jun 25 2011
------------------
	Add support for unsigned int, float, and vectors thereof.

v5_1_7 Jun 24 2011
------------------
	use getenv instead of gSystem->Getenv().

v5_1_6 Jun 24 2011
------------------
	1. Add option to save ints and vectors of ints.
	2. Get provenance info using gSystem->Getenv(..)

v5_1_5 Jun 07 2011
------------------
	Introduce the switch "crashOnInvalidHandle". When set to zero, 
	TheNtupleMaker will not crash if a handle is zero but merely issue
	an InvalidHandle warning.

v5_1_3 Jun 06 2011
------------------
	1. Allow for matches between std::string and std::basic_string>char> in 
	decodeArguments in rfx.cc. This is needed to handle arguments such as
	const std::string& used in userFloat(const std::string&).

v5_1_1 May 23 2011