@@ -4,7 +4,7 @@
 // Description: TheNtupleMaker helper class for GenEventInfoProduct
 // Created:     Wed Feb 16 01:43:26 2011
 // Author:      Harrison B. Prosper      
-//$Revision: 1.4 $
+//$Revision: 1.5 $
 //-----------------------------------------------------------------------------
 #include <stdlib.h>
 #include "PhysicsTools/TheNtupleMaker/interface/GenEventInfoProductHelper.h"
@@ -32,15 +32,23 @@ GenEventInfoProductHelper::GenEventInfoProductHelper()
       << "Please specify PDFSets in buffer: " 
       << blockname << endl;
 
-  string number = parameter("numberOfPDFSets");
-  if ( number == "" )
+  string snset = parameter("nset");
+  if ( snset == "" )
+    throw cms::Exception("PDFSetsError") 
+      << "Please specify a unique number for PDFSets in buffer: "
+      << blockname << endl; 
+
+  nset_ = atoi(snset.c_str());
+
+  string snpdfset = parameter("numberOfPDFSets");
+  if ( snpdfset == "" )
     throw cms::Exception("PDFSetsError") 
       << "Please specify numberOfPDFSets in buffer: "
       << blockname << endl; 
 
-  npdfset_ = atoi(number.c_str());
+  npdfset_ = atoi(snpdfset.c_str());
   
-  LHAPDF::initPDFSet(1, pdfsetname_);
+  LHAPDF::initPDFSet(nset_, pdfsetname_);
 
   cout << endl << "\t==> using PDF set:      " << pdfsetname_ << endl;
   cout << endl << "\t==> number of PDF sets: " << npdfset_ << endl;
@@ -80,9 +88,9 @@ void GenEventInfoProductHelper::analyzeObject()
 
   // Get pdf central values
 
-  LHAPDF::usePDFMember(1, 0);
-  pdf1_[0] = LHAPDF::xfx(1, x1, q, id1);
-  pdf2_[0] = LHAPDF::xfx(1, x2, q, id2);
+  LHAPDF::usePDFMember(nset_, 0);
+  pdf1_[0] = LHAPDF::xfx(nset_, x1, q, id1);
+  pdf2_[0] = LHAPDF::xfx(nset_, x2, q, id2);
   
   if ( DBGenEventInfo )
     {
@@ -97,9 +105,9 @@ void GenEventInfoProductHelper::analyzeObject()
   double w0 = pdf1_[0] * pdf2_[0];
   for(int i=1; i <= npdfset_; ++i)
     {
-      LHAPDF::usePDFMember(1, i);
-      pdf1_[i] = LHAPDF::xfx(1, x1, q, id1);
-      pdf2_[i] = LHAPDF::xfx(1, x2, q, id2);
+      LHAPDF::usePDFMember(nset_, i);
+      pdf1_[i] = LHAPDF::xfx(nset_, x1, q, id1);
+      pdf2_[i] = LHAPDF::xfx(nset_, x2, q, id2);
       pdfweight_[i] = pdf1_[i] * pdf2_[i] / w0;
       pdfweightsum_[i] += pdfweight_[i];
     }
